@@ -130,14 +130,14 @@ static bot_weapon_select_t tfc_weapon_select[] = { {TF_WEAPON_KNIFE, "tf_weapon_
 												  {TF_WEAPON_AC, "tf_weapon_ac", 5, 0.0f, 2000.0f, 0.0f, 0.0f, 100, true, 100, 1, 0, true, false, false, false, 0.0f, 0.0f},
 												  {TF_WEAPON_RPG, "tf_weapon_rpg", 5, 150.0f, 3000.0f, 0.0f, 0.0f, 100, true, 100, 1, 0, false, false, false, false, 0.0f, 0.0f},
 												  {TF_WEAPON_IC, "tf_weapon_ic", 5, 150.0f, 2000.0f, 0.0f, 0.0f, 100, true, 100, 1, 0, false, false, false, false, 0.0f, 0.0f},
-												  {TF_WEAPON_SUPERSHOTGUN, "tf_weapon_supershotgun", 5, 0.0f, 800.0f, 0.0f, 0.0f, 100, true, 100, 2, 0, false, false, false, false, 0.0f, 0.0f},
+												  {TF_WEAPON_SUPERSHOTGUN, "tf_weapon_supershotgun", 5, 0.0f, 600.0f, 0.0f, 0.0f, 100, true, 100, 2, 0, false, false, false, false, 0.0f, 0.0f},
 												  {TF_WEAPON_SUPERNAILGUN, "tf_weapon_superng", 5, 40.0f, 2000.0f, 0.0f, 0.0f, 100, true, 100, 1, 0, true, false, false, false, 0.0f, 0.0f},
 												  {TF_WEAPON_TRANQ, "tf_weapon_tranq", 5, 0.0f, 100.0f, 0.0f, 0.0f, 10, true, 20, 1, 0, false, false, false, false, 0.0f, 0.0f},
 												  {TF_WEAPON_AUTORIFLE, "tf_weapon_autorifle", 5, 0.0f, 300.0f, 0.0f, 0.0f, 100, true, 100, 1, 0, true, false, false, false, 0.0f, 0.0f},
 												  {TF_WEAPON_AXE, "tf_weapon_axe", 5, 0.0f, 60.0f, 0.0f, 0.0f, 100, true, 100, 0, 0, false, false, false, false, 0.0f, 0.0f},
 												  {TF_WEAPON_PL, "tf_weapon_pl", 5, 150.0f, 500.0f, 0.0f, 0.0f, 100, true, 100, 1, 0, false, false, false, false, 0.0f, 0.0f},
 												  {TF_WEAPON_GL, "tf_weapon_gl", 5, 150.0f, 500.0f, 0.0f, 0.0f, 100, true, 100, 1, 0, false, false, false, false, 0.0f, 0.0f},
-												  {TF_WEAPON_SHOTGUN, "tf_weapon_shotgun", 5, 0.0f, 800.0f, 0.0f, 0.0f, 50, true, 100, 1, 0, false, false, false, false, 0.0f, 0.0f},
+												  {TF_WEAPON_SHOTGUN, "tf_weapon_shotgun", 5, 0.0f, 600.0f, 0.0f, 0.0f, 50, true, 100, 1, 0, false, false, false, false, 0.0f, 0.0f},
 												  {TF_WEAPON_NAILGUN, "tf_weapon_ng", 5, 40.0f, 2000.0f, 0.0f, 0.0f, 100, true, 20, 1, 0, true, false, false, false, 0.0f, 0.0f},
 												  {TF_WEAPON_RAILGUN, "tf_weapon_railgun", 5, 80.0f, 2000.0f, 0.0f, 0.0f, 10, true, 20, 1, 0, true, false, false, false, 0.0f, 0.0f},
 	/* terminator */
@@ -1269,7 +1269,7 @@ static Vector BotBodyTarget(const edict_t* pBotEnemy, bot_t* pBot) {
 			// Make the bot less accurate based on it's targets speed.
 			// ignore the bots own speed - it's sniping!
 			const float enemy_velocity = pBot->enemy.ptr->v.velocity.Length();
-			float aim_error = random_float(0.0f, enemy_velocity) * 0.15f;
+			float aim_error = random_float(0.0f, enemy_velocity) * 0.1f;
 
 			// Make the bot less accurate if the enemy was just seen
 			if (pBot->enemy.f_firstSeen + 2.0f > pBot->f_think_time)
@@ -1308,15 +1308,15 @@ static Vector BotBodyTarget(const edict_t* pBotEnemy, bot_t* pBot) {
 		{
 			// Make the bot less accurate based on it's own speed.
 			const float my_velocity = pBot->pEdict->v.velocity.Length();
-			float aim_error = random_float(0.0f, my_velocity) * 0.1f;
+			float aim_error = random_float(0.0f, my_velocity) * 0.05f;
 
 			// Make the bot less accurate based on it's targets speed.
 			const float enemy_velocity = pBot->enemy.ptr->v.velocity.Length();
-			aim_error += random_float(0.0f, enemy_velocity) * 0.1f;
+			aim_error += random_float(0.0f, enemy_velocity) * 0.05f;
 
 			// Make the bot less accurate if the enemy was just seen
 			if (pBot->enemy.f_firstSeen + 2.0f > pBot->f_think_time)
-				aim_error += static_cast<float>(pBot->bot_skill + 1) * random_float(5.0f, 20.0f);
+				aim_error += static_cast<float>(pBot->bot_skill + 1) * random_float(5.0f, 10.0f);
 
 			// Add condition to check if bot's class is HWGuy [APG]RoboCop[CL]
 			if (mod_id == TFC_DLL && pBot->pEdict->v.playerclass == TFC_CLASS_HWGUY && pBot->current_weapon.iId == TF_WEAPON_AC) {
@@ -1789,7 +1789,7 @@ int BotNadeHandler(bot_t* pBot, bool timed, char newNadeType) {
 	// Go ahead and throw if its about to explode.
 	if (pBot->nadePrimed) {
 		const int lost_health_percent = 100 - PlayerHealthPercent(pEdict);
-		float release_time = 2.8f;
+		float release_time = 0.8f;
 
 		if (pBot->nadeType == GRENADE_MIRV)
 			release_time = 1.0f;
